<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardBase" >
  
    <com.gethotdrop.hotdrop.FitToWidthView
        android:id="@+id/image"
        android:src="@drawable/placeholderimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginMain" />

     <TextView
         android:id="@+id/note"
         style="@style/TextMedium"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/example_card_note"
         android:textSize="18sp" />

     <View
         android:id="@+id/separator"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="@dimen/marginSmall"
         android:layout_marginTop="@dimen/marginSmall"
         android:background="@color/grayLighter"
         android:visibility="visible" />
     
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white" >

         <TextView
             android:id="@+id/score"
             style="@style/BlueText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="@string/example_score" />

         <TextView
             android:id="@+id/timestamp"  
	         style="@style/TextMicro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:text="@string/example_time_stamp"
             android:textColor="@color/gray" />

     </RelativeLayout>
</LinearLayout>