<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Post" >

    <LinearLayout
        style="@style/PostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/text_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_photo"
            style="@style/PostText" />

    </LinearLayout>

    <LinearLayout
        style="@style/PostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_video" />

        <TextView
            android:id="@+id/text_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_video"
            style="@style/PostText" />

    </LinearLayout>

    <LinearLayout
        style="@style/PostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_upload" />

        <TextView
            android:id="@+id/text_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_upload"
            style="@style/PostText" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" 
        android:padding="@dimen/note_text_field_padding" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/note_hint"
            android:inputType="textMultiLine"
            android:lines="3" />

    </RelativeLayout>

</LinearLayout>
